# rsvd

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
cmake/: FindEigen3.cmake
examples/Benchmark/: BenchRunner.hpp  DataStructures.hpp  HelperTraits.hpp  TypesIterator.hpp  main.cpp
examples/SimpleUsage/: main.cpp
include/rsvd/: Constants.hpp  ErrorEstimators.hpp  GramSchmidt.hpp  Prelude.hpp  RandomizedRangeFinder.hpp  RandomizedSvd.hpp  StandardNormalRandom.hpp
test/: ErrorEstimators.cpp  GramSchmidt.cpp  RandomizedRangeFinder.cpp  RandomizedSvd.cpp  StandardNormalRandom.cpp
